# backend-pix

./: .gitignore  checkout.js  home.html  pyproject.toml
src/api/app/: main.py
src/api/middleware/: auth.py
src/core/: generator.py
src/core/pix/application/routers/: create_pix_qrcode.py
src/core/pix/application/services/: generate_pix_qrcode.py  union_template_qrcode.py
src/core/pix/application/services/dto/: pix_qrcode.py
src/core/pix/domain/: entity.py
src/core/qrcode/application/routers/: get_qr_code.py
src/core/qrcode/domain/: entity.py
src/core/security/application/routers/: auth.py
src/core/security/application/services/: auth_jwt.py  verify_jwt.py
src/core/security/application/services/dto/: jwt.py
src/core/security/tests/application/service/: test_create_token.py
src/core/security/utils/: hash.py  hash_jwt.py
src/core/security/utils/exceptions/: erros.py
src/core/user/application/routers/: create_user.py
src/core/user/application/services/: create_user.py
src/core/user/application/services/dto/: user_dto.py
src/core/user/domain/: entity.py
src/core/user/domain/dto/: user_dto.py
src/core/user/domain/exceptions/: user_exceptions.py
src/core/user/domain/repository/: user_repository.py
src/core/user/infra/in_memory/: in_memory_user.py
src/core/user/infra/ponyorm/models/: user.py
src/core/user/infra/ponyorm/repository/: user_repository.py
src/core/user/tests/application/services/: test_create_user.py
src/core/user/tests/domain/unit/: test_entity.py
src/db/: database.db  generate.py
(+2 files in other folders)
